[package]
name = "morse-blinker"
version = "0.1.0"
authors = ["Adam Weber"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.51", default-features = false }
log = { version = "0.4", default-features = false }
esp-idf-hal = "0.45"
anyhow = "1.0"

[build-dependencies]
embuild = "0.32"
